feat(java-enhancement-kit): 支持 JDK 8 版本